--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.75MB/s(Youtube:不良林), server: shanghai-router1-892412-jp4.dukou.info, port: 6304, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router1-892412-jp4.dukou.info, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-318.9KB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-445.8KB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-367.9KB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-8.86MB/s(Youtube:不良林), server: sg-cn-hk-relay-1-767f45.dukou.info, port: 9301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-1-767f45.dukou.info, skip-cert-verify: true}
-  - {name: 未知国家-2.42MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
-  - {name: 🇺🇸 美国-5.50MB/s(Youtube:不良林), server: x.uhwh.ga, port: 443, type: trojan, password: xianba2, sni: x.uhwh.ga, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.71MB/s(Youtube:不良林), server: 120.233.185.59, port: 20021, type: ss, cipher: aes-128-gcm, password: dbdc16e3-1f61-41bb-99a6-5f29d8b86f82}
-  - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 51.161.118.38, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 台湾-1.52MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇦 加拿大-829.7KB/s(Youtube:不良林), server: 51.161.118.38, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-547.1KB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
+  - {name: 🇨🇦 加拿大-1.49MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-509.0KB/s(Youtube:不良林), server: 51.161.118.38, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-301.6KB/s(Youtube:不良林), server: 51.210.51.88, port: 443, type: ssr, cipher: aes-192-ctr, password: sEscPBiAD9K$&@79, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-782.0KB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇰🇷 韩国-384.2KB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-406.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇦 加拿大-1.21MB/s(Youtube:不良林), server: 51.161.118.38, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1.46MB/s(Youtube:不良林), server: zh01lv5ca05.feiguayun.xyz, port: 37087, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-318.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-445.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 未知国家-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-547.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-509.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-301.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-384.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-318.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-445.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 未知国家-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-547.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-509.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-301.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-384.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-318.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-445.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 未知国家-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-547.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-509.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-301.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-384.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-318.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-445.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 未知国家-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-547.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-509.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-301.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-384.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-318.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-445.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 未知国家-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-547.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-509.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-301.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-384.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-318.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-445.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 未知国家-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-547.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-509.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-301.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-384.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-318.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-445.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 未知国家-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-547.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-509.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-301.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-384.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
