--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-14.78MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20030, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
-  - {name: 未知国家-2.46MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
-  - {name: 🇨🇳 台湾-1.61MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇦 加拿大-305.0KB/s(Youtube:不良林), server: 51.161.118.38, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.12MB/s(Youtube:不良林), server: 51.161.118.38, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.25MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20140, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.25MB/s(Youtube:不良林), server: gzyd1.xxcv.cc, port: 20110, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd1.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-675.7KB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-338.8KB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-13.80MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20030, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-421.0KB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 台湾-1.21MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-4.98MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20100, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-558.1KB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-4.04MB/s(Youtube:不良林), server: gzyd1.xxcv.cc, port: 20040, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd1.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-967.2KB/s(Youtube:不良林), server: 120.233.186.250, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.84MB/s(Youtube:不良林), server: 172.104.244.36, port: 28443, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林), server: 213.183.53.208, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇻🇳 越南-4.17MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-14.78MB/s(Youtube:不良林)
-      - 未知国家-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-305.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-675.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-421.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-967.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.17MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-14.78MB/s(Youtube:不良林)
-      - 未知国家-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-305.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-675.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-421.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-967.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.17MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-14.78MB/s(Youtube:不良林)
-      - 未知国家-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-305.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-675.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-421.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-967.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.17MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.21MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-14.78MB/s(Youtube:不良林)
-      - 未知国家-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-305.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-675.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-421.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-967.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.17MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-14.78MB/s(Youtube:不良林)
-      - 未知国家-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-305.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-675.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-421.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-967.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.17MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-14.78MB/s(Youtube:不良林)
-      - 未知国家-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-305.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-675.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-421.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-967.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.17MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-14.78MB/s(Youtube:不良林)
-      - 未知国家-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-305.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-675.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-421.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-967.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.17MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
