--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-2.31MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20100, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.26MB/s(Youtube:不良林), server: gzyd1.xxcv.cc, port: 20110, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd1.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.45MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20110, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.76MB/s(Youtube:不良林), server: gzyd1.xxcv.cc, port: 20090, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd1.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-3.37MB/s(Youtube:不良林), server: 103.173.255.21, port: 28443, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-385.5KB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-150.1KB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20040, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-7.56MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.16MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇯🇵 日本-368.3KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.22MB/s(Youtube:不良林), server: 120.233.186.250, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-842.5KB/s(Youtube:不良林), server: 120.233.186.250, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-960.6KB/s(Youtube:不良林), server: 120.233.186.250, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-207.4KB/s(Youtube:不良林), server: 103.173.155.72, port: 28443, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-216.5KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-410.0KB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-201.5KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-342.5KB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-271.3KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.37MB/s(Youtube:不良林)
-      - 🇬🇧 英国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-842.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-960.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-207.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-216.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-342.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.37MB/s(Youtube:不良林)
-      - 🇬🇧 英国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-842.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-960.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-207.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-216.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-342.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.37MB/s(Youtube:不良林)
-      - 🇬🇧 英国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-842.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-960.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-207.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-216.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-342.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.37MB/s(Youtube:不良林)
-      - 🇬🇧 英国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-842.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-960.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-207.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-216.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-342.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.37MB/s(Youtube:不良林)
-      - 🇬🇧 英国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-842.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-960.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-207.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-216.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-342.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.37MB/s(Youtube:不良林)
-      - 🇬🇧 英国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-842.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-960.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-207.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-216.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-342.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.37MB/s(Youtube:不良林)
-      - 🇬🇧 英国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-842.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-960.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-207.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-216.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-342.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
